Add time based batch limits